[package]
name = "vidlater"
version = "0.1.0"
edition = "2021"

[dependencies]
atom_syndication = { version = "0.12.3", default-features = false }
chrono = { version = "0.4.38", default-features = false, features = ["now", "std"] }
env_logger = { version = "0.11.3", default-features = false, features = ["humantime"]}
form_urlencoded = "1.2.1"
log = "0.4.21"
tiny_http = "0.12.0"
uriparse = "0.6.4"

[profile.release]
strip = "debuginfo"
