[package]
name = "feedlynx"
version = "0.1.0"
edition = "2021"
description = "TODO"
license = "MIT OR Apache-2.0"

homepage = "https://github.com/wezm/feedlynx"
repository = "https://github.com/wezm/feedlynx"
keywords = []
categories = []

[dependencies]
atom_syndication = { version = "0.12.3", default-features = false }
chrono = { version = "0.4.38", default-features = false, features = ["now", "std"] }
env_logger = { version = "0.11.3", default-features = false, features = ["humantime"]}
form_urlencoded = "1.2.1"
html5gum = "0.5.7"
httpdate = "1.0.3"
libc = "0.2.155"
log = "0.4.21"
minreq = "2.11.2"
tiny_http = "0.12.0"
uriparse = "0.6.4"

[profile.release]
strip = "debuginfo"

[profile.test]
opt-level = 1

[features]
default = ["rust-tls"]
native-tls = ["minreq/https-native"]
rust-tls = ["minreq/https-rustls"]
