[package]
name = "feedlynx"
version = "0.1.0"
edition = "2021"
description = "Collect links to read or watch later in your RSS reader."
license = "MIT OR Apache-2.0"
authors = [
    "Wesley Moore <wes@wezm.net>"
]

homepage = "https://github.com/wezm/feedlynx"
repository = "https://github.com/wezm/feedlynx"
keywords = ["rss", "cli", "feed", "atom"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
atom_syndication = { version = "0.12.3", default-features = false }
chrono = { version = "0.4.38", default-features = false, features = ["now", "std"] }
env_logger = { version = "0.11.5", default-features = false, features = ["humantime"]}
form_urlencoded = "1.2.1"
html5gum = "0.5.7"
httpdate = "1.0.3"
libc = "0.2.155"
log = "0.4.22"
minreq = "2.12.0"
pico-args = "0.5.0"
tiny_http = "0.12.0"
tinyjson = "2.5.1"
uriparse = "0.6.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Security", "Win32_System_Console"] }

[profile.release]
strip = "debuginfo"

[profile.test]
opt-level = 1

[features]
default = ["rust-tls"]
native-tls = ["minreq/https-native"]
rust-tls = ["minreq/https-rustls"]
